--- a/app/views/stats/index.slim
+++ b/app/views/stats/index.slim
@@ -28,20 +28,45 @@ hr.divider
 
 .row.stats-charts
   .six.columns
-    #chart
+    #word_distribution_chart
       svg
   .ten.columns
-    #chart2
+    #all_commit_time_chart
       svg
 table.table.stats-table
   thead 
     tr 
       th
         h1 = number_with_delimiter(@total_words, :delimiter => ',')
-        = "Word".pluralize(@total_words) + " Submitted"
+        = 'Word'.pluralize(@total_words) + ' Submitted'
       th 
         h1 = number_with_delimiter(@total_words_new, :delimiter => ',')
-        = "Word".pluralize(@total_words_new) + " Awaiting Translation"
+        = 'Word'.pluralize(@total_words_new) + ' Awaiting Translation'
       th 
         h1 = number_with_delimiter(@total_words_pending, :delimiter => ',')
-        = "Word".pluralize(@total_words_pending) + " Awaiting Review"
+        = 'Word'.pluralize(@total_words_pending) + ' Awaiting Review'
+
+.row.stats-charts
+  .eight.columns
+    div: h3 = @top_projects[0][:name]
+    #project_commit_time_chart_0
+      svg
+  .eight.columns
+    div: h3 = @top_projects[1][:name]
+    #project_commit_time_chart_1
+      svg
+.row.stats-charts
+  .eight.columns
+    div: h3 = @top_projects[2][:name]
+    #project_commit_time_chart_2
+      svg
+  .eight.columns
+    div: h3 = @top_projects[3][:name]
+    #project_commit_time_chart_3
+      svg
+= select_tag 'project', options_for_select(Project.all.map {|p| [p.name, p.id]}, @top_projects[4][:id])
+.row.stats-charts
+  .sixteen.columns
+    #project_commit_time_chart_4
+      svg
+
