--- a/app/assets/stylesheets/base/_flash.scss
+++ b/app/assets/stylesheets/base/_flash.scss
@@ -22,7 +22,7 @@ $flash-animation-duration: 0.5s;
     letter-spacing: 0px;
   }
 
-  [class^="icon-"], [class*=" icon-"] { 
+  .fa {
     float: left;
   }
 
