--- a/app/assets/stylesheets/partials/_infinite_scroll.scss
+++ b/app/assets/stylesheets/partials/_infinite_scroll.scss
@@ -26,6 +26,6 @@ p.loading-more {
   animation: spin 1s infinite linear;
 }
 
-.icon-refresh.spinning {
+.fs.fa-refresh.spinning {
   display: inline-block;
 }
