--- a/app/assets/stylesheets/partials/_multi_field.scss
+++ b/app/assets/stylesheets/partials/_multi_field.scss
@@ -26,7 +26,7 @@
       }
     }
 
-    .icon-minus-sign { 
+    .fa.fa-minus-circle {
       // display: none;
       position: absolute;
       top: 8px;
