--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -10,17 +10,14 @@
         <span class="controls">
           <!-- {{#controls}} -->
             <button class="square approve">
-              <i class="icon-ok"></i>
+              <i class="fa fa-check"></i>
             </button>
             <button class="square reject">
-              <i class="icon-remove"></i>
-            </button>
-            <button class="square flag">
-              <i class="icon-flag"></i>
+              <i class="fa fa-ban"></i>
             </button>
           <!-- {{/controls}} -->
           <button class="default square expand-link">
-            <i class="icon-edit"></i>
+            <i class="fa fa-pencil-square-o"></i>
           </button>
         </span>
         
