--- a/app/views/glossary/index.slim
+++ b/app/views/glossary/index.slim
@@ -24,7 +24,7 @@
 .header
   h1 Glossary
   .pull-right 
-    button.default.square href='#settings' rel='modal': i.icon-globe
+    button.default.square href='#settings' rel='modal': i.fa.fa-globe
     button.primary href='#add-entry' rel='modal' Add Term
 
 hr.divider
