--- a/app/views/home/_filter_bar.slim
+++ b/app/views/home/_filter_bar.slim
@@ -28,7 +28,7 @@
 
       = submit_tag 'Filter', class: 'primary'
       .pull-right#expand-search
-        i.icon-angle-right
+        i.fa.fa-angle-right
 
     .collapse
       .control-group
