--- a/app/views/search/commits.slim
+++ b/app/views/search/commits.slim
@@ -34,7 +34,7 @@ hr.divider
         = text_field_tag 'sha', '', placeholder: '935ad4', id: 'commit-sha-field'
         = submit_tag 'Search', class: 'primary'
         .pull-right#expand-search
-          i.icon-angle-right
+          i.fa.fa-angle-right
 
       .collapse 
 
