--- a/app/views/translations/edit.slim
+++ b/app/views/translations/edit.slim
@@ -71,7 +71,7 @@ hr.divider
                       ]
                       = change.compact_copy_from ? change.compact_copy_from : "None"
                     .arrow
-                      i.icon-double-angle-right.text-error
+                      i.fa.fa-double-angle-right.text-error
                     .change-state[
                         data-full=(change.full_copy_to ? change.full_copy_to : "None")
                         data-compact=(change.compact_copy_to ? change.compact_copy_to : "None")
