--- a/app/views/translation_units/index.slim
+++ b/app/views/translation_units/index.slim
@@ -37,7 +37,7 @@ hr.divider
                                    ]), id: 'field-select', class: 'span2'
         = submit_tag 'Search', class: 'primary'
         .pull-right#expand-search
-          i.icon-angle-right
+          i.fa.fa-angle-right
 
       .collapse 
 
