Minor changes.  Updates Jquery to HTTPS

--- a/app/views/incontext/translations/edit.html.slim
+++ b/app/views/incontext/translations/edit.html.slim
@@ -2,7 +2,7 @@ doctype html
 html lang="en"
   head
     = csrf_meta_tags
-    script src="http://code.jquery.com/jquery-1.10.1.min.js"
+    script src="https://code.jquery.com/jquery-1.10.1.min.js"
 
     sass:
       textarea.success
