--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -12,6 +12,12 @@
   - if current_user.monitor?
     .pull-right  
       button.danger href=project_commit_url(@project, @commit) data-method='DELETE' data-confirm='Are you sure you want to delete this commit?' Delete
+    - if @commit.loading?
+      .pull-right
+        = button_to 'Clear Workers', clear_project_commit_url(@project, @commit)
+    - else
+      .pull-right
+        = button_to 'Reimport', redo_project_commit_path(@project, @commit)
 
   h6
     strong #{@commit.revision}
