--- a/app/views/locale/projects/show.slim
+++ b/app/views/locale/projects/show.slim
@@ -49,7 +49,7 @@
         |  / 
         = "#{commit.revision[0, 6]}"
       - else 
-        Never imported before
+        | Never imported before
 
 hr.divider
 
