--- a/app/assets/stylesheets/pages/commits.css.scss
+++ b/app/assets/stylesheets/pages/commits.css.scss
@@ -75,5 +75,22 @@ body.commits {
     margin-top: 40px;
     text-align: center;
   }
+
+  .control-group {
+    margin-bottom: 15px;
+    label {
+      width: 400px;
+      text-transform: none;
+    }
+
+    .controls {
+      margin-left: 400px;
+    }
+
+    input[type="submit"] {
+      float: none;
+      width: 170px;
+    }
+  }
 }
 
