Adds 'Not Yet Translated' links to Key Search

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -85,3 +85,4 @@ pre {
 .text-error { color: $input-red }
 .text-success { color: $input-green }
 .text-info { color: $input-blue }
+.muted { color: $gray3; }
