--- a/app/views/stats/index.js.coffee.erb
+++ b/app/views/stats/index.js.coffee.erb
@@ -34,15 +34,15 @@ $(window).ready () ->
 				"values": project_data["daily_creates"]
 			},
 			{
-				"key": "Average Load Time per Commit ",
+				"key": "Average Commit Load Time (in hours)",
 				"values": project_data["average_load_time"]
 			},
 			{
-				"key": "Average Translation Time per Commit",
+				"key": "Average Commit Translation Time (in hours)",
 				"values": project_data["average_translation_time"]
 			},
 			{
-				"key": "Average Completion per Commit",
+				"key": "Average Commit Completion Time (in hours)",
 				"values": project_data["average_completion_time"]
 			}
 		].map((series) ->
