--- a/app/views/search/keys.slim
+++ b/app/views/search/keys.slim
@@ -35,7 +35,7 @@ hr.divider
         = select_tag 'project_id', options_for_select(project_list)
         = submit_tag 'Search', class: 'primary'
         .pull-right#expand-search
-          i.fa.fa-angle-right
+          i.fa.fa-chevron-right
 
       .collapse 
         .control-group 
