--- a/app/views/search/translations.slim
+++ b/app/views/search/translations.slim
@@ -41,7 +41,7 @@ hr.divider
                                                  ]), id: 'field-select', class: 'span2'
         = submit_tag 'Search', class: 'primary'
         .pull-right#expand-search
-          i.fa.fa-angle-right
+          i.fa.fa-chevron-right
         
       .collapse
         .control-group 
