Adds job count to commits page as well

--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -23,7 +23,12 @@
       - else
         = "Loading since #{time_ago_in_words(@commit.created_at)}"
       | &nbsp;/&nbsp;
-      = "#{@commit.revision[0, 6]} (Currently #{@commit.loading? ? 'Loading' : @commit.ready? ? 'Ready' : 'Translating'})"
+      - if @commit.loading?
+        - current_status = "Loading with #{pluralize(@commit.list_workers.count, 'Job')}"
+      - else
+        - current_status = (@commit.ready? ? 'Ready' : 'Translating')
+
+      = "#{@commit.revision[0, 6]} (Currently #{current_status})"
 
 hr.divider
 
