--- a/app/views/home/index.js.coffee.erb
+++ b/app/views/home/index.js.coffee.erb
@@ -13,7 +13,7 @@
 #    limitations under the License.
 
 $(window).ready () ->
-  $("#expand-search").click () ->
+  expand_filter_bar = () ->
     if $(".collapse").data("toggle")
       $("#expand-search").removeClass("active")
       $(".collapse").data("toggle", false)
@@ -22,6 +22,12 @@ $(window).ready () ->
       $("#expand-search").addClass("active")
       $(".collapse").data("toggle", true)
       $(".collapse").slideDown()
+
+  $("#expand-search").click expand_filter_bar
+  $("#expand-filters").click () ->
+    $(window).scrollTop(0)
+    expand_filter_bar()
+
 
   toggle = (row) ->
     entry = row.find('.description')
